@@ -1,24 +1,24 @@
-/* OpenCL runtime library: clGetDeviceInfo()
+/* OpenCL runtime library: clGetCommandQueueInfo
 
    Copyright (c) 2012 Kalle Raiskila
-   
+
    Permission is hereby granted, free of charge, to any person obtaining a copy
-   of this software and associated documentation files (the "Software"), to deal
-   in the Software without restriction, including without limitation the rights
-   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-   copies of the Software, and to permit persons to whom the Software is
+   of this software and associated documentation files (the "Software"), to
+   deal in the Software without restriction, including without limitation the
+   rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+   sell copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:
-   
+
    The above copyright notice and this permission notice shall be included in
    all copies or substantial portions of the Software.
-   
+
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-   THE SOFTWARE.
+   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+   FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+   IN THE SOFTWARE.
 */
 
 #include "pocl_util.h"
@@ -50,6 +50,12 @@ POname(clGetCommandQueueInfo)(cl_command_queue      command_queue ,
     case CL_QUEUE_PROPERTIES:
       POCL_RETURN_GETINFO( cl_command_queue_properties, 
                               command_queue->properties );
+      break;
+    /* Device-side enqueue specific queries */
+    case CL_QUEUE_SIZE:
+      return CL_INVALID_COMMAND_QUEUE;
+    case CL_QUEUE_DEVICE_DEFAULT:
+      POCL_RETURN_GETINFO (cl_command_queue, NULL);
       break;
   }
   return CL_INVALID_VALUE;
