@@ -1483,8 +1483,8 @@ pocl_init_default_device_infos (cl_device_id dev)
   /* OpenCL 2.0 properties */
   dev->svm_caps = 0;
   /* TODO these are minimums, figure out whats a reasonable value */
-  dev->max_events = 1024;
-  dev->max_queues = 1;
+  dev->max_events = 0;
+  dev->max_queues = 0;
 
   /* Default pipe support for PoCL devices */
   dev->pipe_support = CL_FALSE;
@@ -1494,10 +1494,9 @@ pocl_init_default_device_infos (cl_device_id dev)
   dev->max_pipe_active_res = 0;
   dev->max_pipe_packet_size = 0;
 
-  dev->dev_queue_pref_size = 16 * 1024;
-  dev->dev_queue_max_size = 256 * 1024;
-  dev->on_dev_queue_props = CL_QUEUE_OUT_OF_ORDER_EXEC_MODE_ENABLE
-                               | CL_QUEUE_PROFILING_ENABLE;
+  dev->dev_queue_pref_size = 0;
+  dev->dev_queue_max_size = 0;
+  dev->on_dev_queue_props = 0;
   dev->on_host_queue_props = CL_QUEUE_PROFILING_ENABLE;
   dev->has_64bit_long = 1;
   dev->autolocals_to_args = POCL_AUTOLOCALS_TO_ARGS_ALWAYS;
